--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.12.2",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.0",
-    "ejs": "^3.1.5"
+    "ejs": "^3.1.5",
+    "express": "^4.12.2",
+    "mongodb": "^4.12.1",
+    "mongoose": "^6.8.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "got": "^11.3.0",
