--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.5",
     "express": "^4.12.2",
     "mongodb": "^4.12.1",
